Add Maven deploy to gradle

--- a/build.gradle
+++ b/build.gradle
@@ -13,12 +13,14 @@
  *
  */
 
-group 'com.katana.sdk'
-version '1.0'
-
 apply plugin: 'application'
 apply plugin: "jacoco"
-apply plugin: 'nexus'
+apply plugin: 'maven'
+apply plugin: 'signing'
+
+group 'io.kusanagi'
+archivesBaseName = "katana-sdk-java8"
+version '1.0'
 
 applicationDefaultJvmArgs = ["-Djava.library.path=/usr/local/lib -Dkatanaip=127.0.0.1"]
 
@@ -53,7 +55,6 @@ buildscript {
     }
     dependencies {
         classpath "org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.8.1"
-        classpath 'org.gradle.api.plugins:gradle-nexus-plugin:0.6.1'
     }
 }
 
@@ -67,3 +68,68 @@ jacocoTestReport {
     }
 }
 
+task javadocJar(type: Jar) {
+    classifier = 'javadoc'
+    from javadoc
+}
+
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives javadocJar, sourcesJar
+}
+
+signing {
+    sign configurations.archives
+}
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                authentication(userName: ossrhUsername, password: ossrhPassword)
+            }
+
+            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+                authentication(userName: ossrhUsername, password: ossrhPassword)
+            }
+
+            pom.project {
+                name 'katana-sdk-java8'
+                packaging 'jar'
+                // optionally artifactId can be defined here
+                description 'Java SDK to interface with the KATANA™ framework'
+                url 'https://github.com/kusanagi/katana-sdk-java8'
+
+                organization {
+                    name 'kusanagi'
+                    url 'https://kusanagi.io/'
+                }
+                licenses {
+                    license {
+                        name 'MIT License'
+                        url 'http://www.opensource.org/licenses/mit-license.php'
+                        distribution 'repo'
+                    }
+                }
+                scm {
+                    url 'https://github.com/kusanagi/katana-sdk-java8'
+                    connection 'scm:git:https://github.com/kusanagi/katana-sdk-java8.git'
+                    developerConnection 'scm:git@github.com:kusanagi/katana-sdk-java8.git'
+                }
+                developers {
+                    developer {
+                        id 'jega'
+                        name 'Juan Garcia'
+                        email 'jegasmlm@gmail.com'
+                    }
+                }
+            }
+        }
+    }
+}
