--- a/.travis.yml
+++ b/.travis.yml
@@ -44,3 +44,4 @@ script:
 after_success:
 - ./gradlew jacocoTestReport coveralls
 - .utility/initiate-publish.sh
+- ./gradlew closeAndReleaseRepository
