--- a/build.gradle
+++ b/build.gradle
@@ -57,10 +57,12 @@ buildscript {
     }
     dependencies {
         classpath "org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.8.1"
+        classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.8.0"
     }
 }
 
 apply plugin: "com.github.kt3k.coveralls"
+apply plugin: 'io.codearte.nexus-staging'
 
 jacocoTestReport {
     reports {
@@ -134,4 +136,9 @@ uploadArchives {
             }
         }
     }
+}
+
+nexusStaging {
+    packageGroup = "io.kusanagi" //optional if packageGroup == project.getGroup()
+    stagingProfileId = "io.kusanagi" //when not defined will be got from server using "packageGroup"
 }
